2006-02-15  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptooldialog.c: do not unset focus-on-map for all
	tool dialogs.

	* app/tools/gimpcolorpickertool.c
	* app/tools/gimpmeasuretool.c: explicitely do it here instead.

2006-02-15  Sven Neumann  <sven@gimp.org>

	* app/dialogs/info-dialog.c: unset focus-on-map for info dialogs.

2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c (render_frame): applied patch
	from Michael Schumacher that fixes a potential crash in the
	plug-in (bug #328919).

2006-02-14  Sven Neumann  <sven@gimp.org>

	Added some tool shortcuts:

	* app/tools/gimpcroptool.c: Shift+C
	* app/tools/gimpfuzzyselecttool.c: changed from Z to U.
	* app/tools/gimpmagnifytool.c: Z.
	* app/tools/gimpmeasuretool.c: Shift+M.

2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/despeckle.c (despeckle_median): fixed incorrect
	loop boundaries. Should fix bug #331044.

2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.c
	* plug-ins/winicon/icosave.c: applied patches from Felix Pahl.
	Fixes incorrect bit shifts that caused scrambled transparency
	(bug #330692).

2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/sparkle.c: renamed parameter from opacity to
	transparency, since that's how it is being used (bug #331086,
	spotted by Joao).

	* plug-ins/common/gauss.c (gauss): apply multiply_alpha() on the
	source buffer, not the destination (bug #331051, spotted by
	Stephane Chauveau).

2006-02-13  Sven Neumann  <sven@gimp.org>

	* app/config/gimpguiconfig.c: make the internal help browser the
	default for all platforms (bug #329888).

2006-02-13  Sven Neumann  <sven@gimp.org>

	* configure.in: output a nicer and more complete summary.

2006-02-12  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimplayer.c: remove extra semicolon; fix for
	bug #330882 from Jens Granseuer.

2006-02-09  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.8.
